third_party/rust/chromium_crates_io/vendor/lazy_static-v1/tests/compile_fail/static_is_private.rs
#[macro_use]
extern crate lazy_static;

mod outer {
    pub mod inner {
        lazy_static! {
            pub(in outer) static ref FOO: () = ();
        }
    }
}

fn main() {
    assert_eq!(*outer::inner::FOO, ());
}
